Início Editar Designações

--- a/templates/app/designacoes-index.phtml
+++ b/templates/app/designacoes-index.phtml
@@ -5,18 +5,7 @@ $this->layout('layout::default', [
 ])
 ?>
 <?php $this->start('stylesheets') ?>
-
-<link rel="stylesheet" href="/css/bootstrap-datepicker3.css"/>
-<style>
-	.datepicker-inline {
-		display: inline-block;
-		width: auto;
-	}
-	.form-horizontal td .form-group {
-		margin: 0;
-	}
-</style>
-
+<?php $this->insert('forms::designacoes-styles') ?>
 <?php $this->stop() ?>
 
 <div class="row">
@@ -94,252 +83,12 @@ $this->layout('layout::default', [
 <?php endforeach; ?>
 </ul>
 
-<form action="/designacoes/inserir" method="post" class="form-horizontal">
-	<div class="form-group">
-		<label class="col-md-2 control-label">Território</label>
-		<div class="col-md-10 territorio-botoes">
-<?php $totalTerritorios = $numero_territorios; ?>
-<?php $groupLimit = 10; ?>
-<?php $territorio = 1; ?>
-<?php $grupo = 0; ?>
-<?php while ($grupo * $groupLimit < $totalTerritorios): ?>
-			<div class="row">
-<?php for ($gi = 0; $gi < $groupLimit; $gi++): ?>
-<?php $t = $grupo * $groupLimit + $gi + 1; ?>
-<?php if ($gi % 5 === 0): ?>
-			<div class="col-md-6">
-			<div class="btn-group btn-group-justified">
-<?php endif; ?>
-				<div class="btn-group">
-<?php if ($t > $totalTerritorios): ?>
-					<button type="button" class="btn btn-default" disabled>&nbsp;</button>
-<?php else: ?>
-					<button type="button" class="btn btn-default" name="territorio_bt" value="<?= $t ?>"><?= $t ?></button>
-<?php endif; ?>
-				</div>
-<?php if ($gi % 5 === 4): ?>
-			</div>
-			</div>
-<?php endif; ?>
-<?php endfor; ?>
-<?php $grupo++; ?>
-			</div>
-<?php endwhile; ?>
-			<input type="hidden" name="territorio" />
-		</div>
-	</div>
-	<div class="form-group">
-		<label class="col-md-2 control-label">Datas</label>
-		<div class="col-md-10">
-			<div class="row">
-				<div class="col-md-6 text-center data-picker-col">
-					<div class="data-picker data-entrega"></div>
-					<input type="hidden" name="data_entrega" value="" class="data-picker-hidden"/>
-				</div>
-				<div class="col-md-6 text-center data-picker-col">
-					<div class="data-picker data-devolucao"></div>
-					<input type="hidden" name="data_devolucao" value="" class="data-picker-hidden"/>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="form-group">
-		<label class="col-md-2 control-label">Irmãos</label>
-		<div class="col-md-10 irmaos-botoes">
-			<table class="table">
-				<tr>
-					<th>Irmão</th>
-					<th>Comentário</th>
-				</tr>
-			</table>
-<?php $totalIrmaos = count($irmaos); ?>
-<?php $groupLimit = 4; ?>
-<?php $grupo = 0; ?>
-<?php while ($grupo * $groupLimit < $totalIrmaos): ?>
-			<div class="row">
-<?php for ($gi = 0; $gi < $groupLimit; $gi++): ?>
-<?php $t = $grupo * $groupLimit + $gi; ?>
-				<div class="col-md-3">
-<?php if (!empty($irmaos[$t])): ?>
-<?php
-	$irmao = $irmaos[$t];
-	$irmao_id = $this->e($irmao->irmao_id);
-	$irmao_nome = $this->e($irmao->irmao_nome);
-?>
-					<button type="button" class="btn btn-default btn-block" name="irmao_bt" value="<?= $irmao_id ?>"><?= $irmao_nome ?></button>
-<?php else: ?>
-					<button type="button" class="btn btn-default btn-block" disabled>&nbsp;</button>
-<?php endif; ?>
-				</div>
-<?php endfor; ?>
-			</div>
-<?php $grupo++; ?>
-<?php endwhile; ?>
-		</div>
-	</div>
-	<div class="form-group">
-		<label class="col-md-2 control-label">Saídas</label>
-		<div class="col-md-10 saidas-botoes">
-			<table class="table">
-				<tr>
-					<th>Saída</th>
-					<th>Comentário</th>
-				</tr>
-			</table>
-<?php $totalSaidas = count($saidas); ?>
-<?php $groupLimit = 4; ?>
-<?php $grupo = 0; ?>
-<?php while ($grupo * $groupLimit < $totalSaidas): ?>
-			<div class="row">
-<?php for ($gi = 0; $gi < $groupLimit; $gi++): ?>
-<?php $t = $grupo * $groupLimit + $gi; ?>
-				<div class="col-md-3">
-<?php if (!empty($saidas[$t])): ?>
-<?php
-	$saida = $saidas[$t];
-	$saida_id = $this->e($saida->saida_id);
-	$saida_nome = $this->e($saida->saida_nome);
-?>
-					<button type="button" class="btn btn-default btn-block" name="saida_bt" value="<?= $saida_id ?>"><?= $saida_nome ?></button>
-<?php else: ?>
-					<button type="button" class="btn btn-default btn-block" disabled>&nbsp;</button>
-<?php endif; ?>
-				</div>
-<?php endfor; ?>
-			</div>
-<?php $grupo++; ?>
-<?php endwhile; ?>
-		</div>
-	</div>
-	<div class="form-group">
-		<label class="col-md-2 control-label">Comentários</label>
-		<div class="col-md-10">
-			<textarea class="form-control" name="comentario" rows="8"></textarea>
-		</div>
-	</div>
-	<div class="form-group">
-		<div class="col-md-offset-2 col-md-10">
-			<button type="submit">inserir</button>
-		</div>
-	</div>
-</form>
+<?php $this->insert('forms::designacoes', [
+	'numero_territorios' => $numero_territorios,
+	'irmaos' => $irmaos,
+	'saidas' => $saidas,
+]) ?>
 
 <?php $this->start('javascript') ?>
-
-<script src="/js/bootstrap-datepicker.js"></script>
-<script src="/locales/bootstrap-datepicker.pt-BR.min.js"></script>
-<script>
-	function formatDate(date) {
-		var d = String(date.getDate());
-		var m = String(date.getMonth()+1);
-		var y = String(date.getFullYear());
-		return [
-			y,
-			('00'+m).substr(-2),
-			('00'+d).substr(-2)
-		].join('-');
-	}
-	$('.data-entrega').datepicker({
-		title: 'Entrega',
-		toggleActive: true,
-		todayBtn: true,
-		clearBtn: true,
-		todayHighlight: true,
-		language: 'pt-BR'
-	}).on('changeDate', function(ev) {
-		// console.log('changeDate entrega', ev);
-		var date = ev.date;
-		$(this).closest('.data-picker-col')
-			.find('.data-picker-hidden')
-			.prop('value', date ? formatDate(date) : '');
-	});
-	$('.data-devolucao').datepicker({
-		title: 'Devolução',
-		toggleActive: true,
-		todayBtn: true,
-		clearBtn: true,
-		todayHighlight: true,
-		language: 'pt-BR'
-	}).on('changeDate', function(ev) {
-		// console.log('changeDate devolucao', ev);
-		var date = ev.date;
-		$(this).closest('.data-picker-col')
-			.find('.data-picker-hidden')
-			.prop('value', date ? formatDate(date) : '');
-	});
-	var terr_bts = $('.territorio-botoes button');
-	var terr_inp = $('.territorio-botoes input');
-	terr_bts.on('click', function(ev) {
-		terr_bts.removeClass('btn-primary').addClass('btn-default');
-		$(this).removeClass('btn-default').addClass('btn-primary');
-		terr_inp.prop('value', $(this).prop('value'));
-	});
-	var irmaos_bts = $('.irmaos-botoes button');
-	irmaos_bts.on('click', function(ev) {
-		var bt = $(this);
-		bt.prop('disabled', true);
-		var row = $('<tr/>').append([
-			$('<td/>').append([
-				$('<input/>').prop({
-					type: 'hidden',
-					name: 'irmaos_id[]',
-					value: $(this).prop('value')
-				})[0],
-				$('<p/>').addClass('form-control-static').text($(this).text())[0]
-			])[0],
-			$('<td/>').append([
-				$('<div/>').addClass('form-group').append([
-					$('<div/>').addClass('input-group').append([
-						$('<input/>').addClass('form-control').prop({
-							type: 'text',
-							name: 'irmaos_comentario[]'
-						})[0],
-						$('<div/>').addClass('input-group-btn').append([
-							$('<button/>').addClass('btn btn-danger').text('remover').on('click', function(ev) {
-								bt.prop('disabled', false);
-								row.remove();
-								row = void 0;
-							})[0]
-						])[0]
-					])[0]
-				])[0]
-			])[0]
-		]);
-		$('.irmaos-botoes table').append(row);
-	});
-	var saidas_bts = $('.saidas-botoes button');
-	saidas_bts.on('click', function(ev) {
-		var bt = $(this);
-		bt.prop('disabled', true);
-		var row = $('<tr/>').append([
-			$('<td/>').append([
-				$('<input/>').prop({
-					type: 'hidden',
-					name: 'saidas_id[]',
-					value: $(this).prop('value')
-				})[0],
-				$('<p/>').addClass('form-control-static').text($(this).text())[0]
-			])[0],
-			$('<td/>').append([
-				$('<div/>').addClass('form-group').append([
-					$('<div/>').addClass('input-group').append([
-						$('<input/>').addClass('form-control').prop({
-							type: 'text',
-							name: 'saidas_comentario[]'
-						})[0],
-						$('<div/>').addClass('input-group-btn').append([
-							$('<button/>').addClass('btn btn-danger').text('remover').on('click', function(ev) {
-								bt.prop('disabled', false);
-								row.remove();
-								row = void 0;
-							})[0]
-						])[0]
-					])[0]
-				])[0]
-			])[0]
-		]);
-		$('.saidas-botoes table').append(row);
-	});
-</script>
-
+<?php $this->insert('forms::designacoes-scripts') ?>
 <?php $this->stop() ?>
