--- a/templates/app/designacoes-inserir.phtml
+++ b/templates/app/designacoes-inserir.phtml
@@ -1,6 +1,6 @@
 <?php
 $this->layout('layout::default', [
-    'title' => 'Designações - Inserir',
+    'title' => isset($editar) ? 'Designações - Editar' : 'Designações - Inserir',
     'authentication' => isset($authentication) ? $authentication : null,
 ])
 ?>
@@ -15,8 +15,11 @@ $this->layout('layout::default', [
         </div>
     </div>
 </div>
-
+<?php if (isset($editar)): ?>
+<p>Alterado designação (<?= $this->e($editar) ?>):</p>
+<?php else: ?>
 <p>Nova designação:</p>
+<?php endif; ?>
 
 <pre>
 	POST::
