--- a/templates/forms/designacoes.phtml
+++ b/templates/forms/designacoes.phtml
@@ -1,5 +1,9 @@
-
-<form action="/designacoes/inserir" method="post" class="form-horizontal">
+<?php
+	$formAction = isset($designacao)
+		? '/designacoes/editar/'.$this->e($designacao->designacao_id)
+		: '/designacoes/inserir';
+?>
+<form action="<?= $formAction ?>" method="post" class="form-horizontal">
 	<div class="form-group">
 		<label class="col-md-2 control-label">Território</label>
 		<div class="col-md-10 territorio-botoes">
@@ -19,13 +23,7 @@
 <?php if ($t > $totalTerritorios): ?>
 					<button type="button" class="btn btn-default" disabled>&nbsp;</button>
 <?php else: ?>
-<?php
-	$btClass = 'btn-default';
-	if (isset($designacao) && $designacao->designacao_territorio == $t) {
-		$btClass = 'btn-primary';
-	}
-?>
-					<button type="button" class="btn <?= $btClass ?>" name="territorio_bt" value="<?= $t ?>"><?= $t ?></button>
+					<button type="button" class="btn btn-default" name="territorio_bt" value="<?= $t ?>"><?= $t ?></button>
 <?php endif; ?>
 				</div>
 <?php if ($gi % 5 === 4): ?>
@@ -36,11 +34,7 @@
 <?php $grupo++; ?>
 			</div>
 <?php endwhile; ?>
-<?php if (isset($designacao)): ?>
-			<input type="hidden" name="territorio" value="<?= $this->e($designacao->designacao_territorio) ?>" />
-<?php else: ?>
 			<input type="hidden" name="territorio" />
-<?php endif; ?>
 		</div>
 	</div>
 	<div class="form-group">
@@ -128,12 +122,12 @@
 	</div>
 	<div class="form-group">
 		<label class="col-md-2 control-label">Comentários</label>
-		<div class="col-md-10">
+		<div class="col-md-10 desig-comentario">
 			<textarea class="form-control" name="comentario" rows="8"></textarea>
 		</div>
 	</div>
 	<div class="form-group">
-		<div class="col-md-offset-2 col-md-10">
+		<div class="col-md-offset-2 col-md-10 desig-enviar">
 			<button type="submit">inserir</button>
 		</div>
 	</div>
