--- a/templates/app/designacoes-index.phtml
+++ b/templates/app/designacoes-index.phtml
@@ -19,17 +19,24 @@ $this->layout('layout::default', [
 	</div>
 </div>
 
-<p>Total: <?=$this->e($result['count'])?></p>
+<p>
+	Territórios: <?= $this->e(count($list)) ?> /
+	Designações: <?= $this->e($result['count']) ?>
+</p>
 
+<?php $this->insert('forms::designacao-agrupado', [
+	'list' => $list,
+]) ?>
+
+<?php /*
 <ul>
-<?php
 foreach ($list as $designacao) {
 	$this->insert('forms::designacao-linha', [
 		'designacao' => $designacao,
 	]);
 }
-?>
 </ul>
+*/ ?>
 
 <?php $this->insert('forms::designacoes', [
 	'numero_territorios' => $numero_territorios,
