--- a/templates/app/irmaos-designacoes.phtml
+++ b/templates/app/irmaos-designacoes.phtml
@@ -1,6 +1,6 @@
 <?php
 $this->layout('layout::default', [
-    'title' => 'Irmãos',
+    'title' => 'Irmãos - Designações',
     'authentication' => isset($authentication) ? $authentication : null,
 ])
 ?>
@@ -16,23 +16,19 @@ $this->layout('layout::default', [
     </div>
 </div>
 
-<p>Total: <?=$this->e($result['count'])?></p>
-
-<ul>
-<?php foreach ($list as $irmao):
+<?php
 	$esc_id = $this->e($irmao->irmao_id);
 	$esc_nome = $this->e($irmao->irmao_nome);
 ?>
-	<li>
-		<a href="/irmaos/editar/<?= $esc_id ?>">(editar)</a>
-		<a href="/irmaos/remover/<?= $esc_id ?>">(remover)</a>
-		<a href="/irmaos/designacoes/<?= $esc_id ?>">(designações)</a>
-		(<?= $esc_id ?>) <?= $esc_nome ?>
-	</li>
-<?php endforeach; ?>
-</ul>
+<div class="well well-sm">
+	<a href="/irmaos/editar/<?= $esc_id ?>">(editar)</a>
+	<a href="/irmaos/remover/<?= $esc_id ?>">(remover)</a>
+	(designações)
+	(<?= $esc_id ?>) <?= $esc_nome ?>
+</div>
 
-<form action="/irmaos/inserir" method="post">
-	<input type="text" name="nome" />
-	<button type="submit">inserir</button>
-</form>
+<?php $this->insert('forms::designacao-agrupado', [
+	'list' => $list,
+]) ?>
+
+<p><a href="/irmaos">Voltar para a lista</a></p>
