--- a/templates/layout/default.phtml
+++ b/templates/layout/default.phtml
@@ -13,6 +13,12 @@
         .app-content { flex: 1; }
         .app-footer { padding-bottom: 1em; }
         .zf-green, h2 a { color: #68b604; }
+        .panel-heading-tabs {
+            padding-bottom: 0;
+        }
+        .panel-heading-tabs .nav-tabs {
+            margin-bottom: -1px;
+        }
     </style>
     <?=$this->section('stylesheets')?>
 </head>
