--- a/templates/layout/default.phtml
+++ b/templates/layout/default.phtml
@@ -55,7 +55,7 @@
                     </li>
 <?php if (empty($authentication)): ?>
                     <li>
-                        <a href="/login">Login</a>
+                        <a href="/login">Login / Cadastrar</a>
                     </li>
 <?php else: ?>
                     <li>
